crates/adapters/celestia/src/snapshots/sov_celestia_adapter__config__tests__correct_standard_config_with_client.snap
---
source: crates/adapters/celestia/src/config.rs
expression: config
---
{
  "celestia_rpc_auth_token": "MY.SECRET.TOKEN",
  "celestia_rpc_address": "https://mocha.example.com:36658",
  "max_celestia_response_body_size": 60000000,
  "request_timeout_secs": 10,
  "connect_timeout_secs": 10,
  "pool_idle_timeout_secs": 90,
  "safe_lead_time_ms": 300,
  "signer_address": null,
  "tx_priority": null,
  "backoff_min_delay_ms": 100,
  "backoff_max_delay_ms": 12000,
  "backoff_max_times": 60,
  "backoff_factor": 2.0,
  "twinkle": null
}
